# RAG-Pipeline

./: .gitignore  .secrets.baseline  1-rag_evaluation.ipynb  2-CorrectiveRAG.ipynb  4-AdaptiveRAG.ipynb  README.md  cache_augment_generation.ipynb  pyproject.toml  requirements.txt
DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb  semantichunking.ipynb
DataIngestParsing/data/structured_files/: inventory.xlsx
Full_Rag_Pipeline/src/document_ingestion/: document_processor.py
Langgraph/: 1-simplegraph.ipynb  2-chatbot.ipynb  3-DataclassStateSchema.ipynb  4-pydantic.ipynb  6-chatbotswithmultipletools.ipynb
QueryEnhancement/: HyDE.ipynb  querydecomposition.ipynb  queryexpansion.ipynb
RAG_Agents/: 7-ReActAgents.ipynb
VectorDatabases/: 1-chromadb.ipynb  2-faiss.ipynb  PineconeVectorDB.ipynb  embedding.ipynb  openaiembeddings.ipynb
hybrid_search_strategies/: denseparse.ipynb  mmr.ipynb
langchainupdated/updatedlangchain/: 1-langchainintro.ipynb  2-modelintegration.ipynb  3-tools.ipynb  4-messages.ipynb  5-structuredoutput.ipynb
